Fix category assign action
